--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
     height: 800px;
 }
 .message-card{
-    width: 360px;
+    width: 600px;
     height: 50px;
     margin-top: 10px;
     margin-left: 25px;
@@ -19,11 +19,13 @@
     font-style: normal;
     font-weight: bold;
     white-space: pre;
-    max-width: 360px;
+    max-width: 600px;
     overflow: auto;
 }
 .element2 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: italic;
     font-weight: bolder;
+    max-width: 600px;
+    overflow: auto;
 }
