--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
     margin-top: 10px;
     margin-left: 25px;
     margin-bottom: 10px;
-    background-color: lightblue;
+    background-color: lightgreen;
 }
 
 .message-card div{
@@ -17,7 +17,7 @@
 }
 .element1 {
     font-style: normal;
-    font-weight: bold;
+    font-weight: 800;
     white-space: pre;
     max-width: 600px;
     overflow: auto;
@@ -25,7 +25,9 @@
 .element2 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: italic;
+    font-size: larger;
     font-weight: bolder;
     max-width: 600px;
     overflow: auto;
+    color: darkorchid;
 }
